@@ -968,6 +968,9 @@ An
 #search_policy_txt
 Marqueur de politique
 
+#search_participating_txt
+Organisation participante
+
 #search_view_txt
 EXPLORE <span>filtres</span>
 
