@@ -965,6 +965,9 @@ IATI प्रकाशक
 #search_policy_txt
 नीति मार्कर
 
+#search_participating_txt
+भाग लेने वाला संगठन
+
 #search_view_txt
 EXPLORE <span>फिल्टर</span>
 
