@@ -968,6 +968,9 @@ IATI出版
 #search_policy_txt
 ポリシーマーカー
 
+#search_participating_txt
+参加団体
+
 #search_view_txt
 EXPLORE <span>フィルタ</span>
 
