@@ -965,6 +965,9 @@ Año
 #search_policy_txt
 Marcador de política
 
+#search_participating_txt
+Organización participante
+
 #search_view_txt
 EXPLORE <span>filtros</span>
 
