@@ -237,12 +237,12 @@
 	</tr>
 	<tr>
 		<td class="filter_title"><span>&#10096;&#10097;</span> {search_policy_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> PARTICIPATING ORG</td>
+		<td class="filter_title"><span>&#10096;&#10097;</span> {search_participating_txt}</td>
 		<td class="filter_title"><span>&#10096;&#10097;</span> FLAGS AND TAGS</td>
 	</tr>
 	<tr>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/PolicyMarker/#codes" target="blank">IATI code</a> for the vocabulary to be used to define a policy or theme addressed by the activity</td>
-		<td>An <a href="http://reference.iatistandard.org/203/codelists/OrganisationType/#codes" target="blank">IATI code</a> for an organisation involved with the activity</td>
+		<td>A list of <a href="http://reference.iatistandard.org/203/activity-standard/iati-activities/iati-activity/participating-org/" target="blank">IATI reference numbers</a> for organisations involved with the activity</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/TagVocabulary/#codes" target="blank">IATI code</a> for the vocabulary or taxonomy used for tag classifications and/or a process flag to indicate that this activity relates entirely or partially to humanitarian aid</td>
 	</tr>
 </table>
@@ -359,7 +359,7 @@
 	</select>
 </div><div class="search_wrap">
 	<div class="search_label">
-		<span>&#10096;&#10097;</span> PARTICIPATING ORG
+		<span>&#10096;&#10097;</span> {search_participating_txt}
 	</div>
 	<select aria-label="Select an participating organisation type from this dropdown" id="view_search_select_participating" class="chosen" multiple>
 		<option value></option>
