@@ -4,6 +4,7 @@ Add new search test page
 Add new search filters
 Add code list links and description in table
 Fix closing div tag
+Add translations for participating-org
 
 
 Development Portal (2019-11-9 shi)
